# code-bro

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
backend/: CodeBro.spec  codebro_entry.py  constraints.txt  pyproject.toml
backend/app/: __init__.py  config.py  controller.py  database.py  execution_server.py  main.py  models.py  repository.py  tag_inference.py
backend/tests/: conftest.py  test_api.py  test_controller.py  test_execution_server.py  test_repository.py  test_tag_inference.py
docs/: ARCHITECTURE.md  FIREFOX_DEBUGGER_SHAREDARRAYBUFFER_ISSUE.md  PYTHON_DEBUGGER_IMPLEMENTATION_PLAN.md  RELEASE.md  RELEASE_MANIFEST.md
frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/execution/: bridge.html  bridge.js  bridge.test.js  debugger.py  worker.js  worker.test.js
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AppShell.tsx  Brand.tsx  CodeEditor.test.tsx  CodeEditor.tsx  ConflictDialog.test.tsx  ConflictDialog.tsx  DebuggerPanel.tsx  EditorSettings.test.tsx  EditorSettings.tsx  ResizeHandle.test.tsx  ResizeHandle.tsx  RunnerPanel.test.tsx  RunnerPanel.tsx  ServerStatusBanner.test.tsx  ServerStatusBanner.tsx  SessionMetadataPanel.test.tsx  SessionMetadataPanel.tsx  SessionNotesEditor.test.tsx  SessionNotesEditor.tsx  SessionNotesFullscreen.test.tsx  SessionNotesFullscreen.tsx  (+11 more)
scripts/: build-execution.mjs  check-node-version.mjs  dev.mjs  package-macos.sh  smoke-pyodide.mjs  smoke-ui.mjs
(+28 files in other folders)
